数据库生成问题修改
